<resources>
    <string name="app_name">AppGrupo8</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="textpregunta1">Pregunta 1</string>
    <string name="textpregunta2">Pregunta 2</string>
    <string name="textpregunta3">Pregunta 3</string>
    <string name="textpregunta4">Pregunta 4</string>

    <string name="p4_header_sub">API DUMMYJSON</string>
    <string name="p4_header_title">Listado de Publicaciones</string>
    <string name="p4_error_loading">Error al cargar las publicaciones</string>
    <string name="p4_item_user_id">User ID: %1$d</string>
    <string name="p4_item_views">%1$d vistas</string>
    <string name="p4_item_toast">Post ID: %1$d\nUsuario: %2$d\nVistas: %3$d</string>

    <string name="textusuario">Usuario</string>
    <string name="textpassword">Password</string>
    <string name="textlogin">INGRESAR</string>
    <string name="textcerrarsesion">CERRAR SESIÓN</string>
</resources>
